# sonic-roadtrip

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
app/: package-lock.json  package.json
app/src/: App.js
app/src/search/: ArtistResult.css  ArtistResult.js  ArtistSearch.css  ArtistSearch.js  SearchBar.css  SearchBar.js
src/: lib.rs  main.rs  spotify_api.rs
src/spotify_api/: artist.rs  artist_search.rs  client.rs  credentials.rs
