# You must change these to your own details.
[package]
name = "sonic-roadtrip"
description = "website for finding new music"
version = "0.1.0"
authors = ["Hunter"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "=0.2.34"
rspotify = "0.7.0"